# WaterInfo-RDF-Connect

./: .gitignore
Processorrepo/CSVpreProcessorPy/: pyproject.toml
Processorrepo/CSVpreProcessorPy/src/CSVpreProcessorPy/: processor.py  processor.ttl
Processorrepo/GraphdbProcessorPy/: pyproject.toml
Processorrepo/GraphdbProcessorPy/src/GraphdbProcessorPy/: processor.py  processor.ttl
Processorrepo/Morph-KGCProcessorPy/: pyproject.toml
Processorrepo/Morph-KGCProcessorPy/src/RmlProcessorPy/: processor.ttl
Processorrepo/MorphKGCProcessorPy/: pyproject.toml
Processorrepo/MorphKGCProcessorPy/src/MorphKGCProcessorPy/: processor.py  processor.ttl
Processorrepo/PrettifyProcessorPy/: pyproject.toml
Processorrepo/PrettifyProcessorPy/src/PrettifyProcessorPy/: processor.py  processor.ttl
Processorrepo/PrintProcessorPy/: pyproject.toml
Processorrepo/PrintProcessorPy/src/PrintProcessorPy/: processor.py  processor.ttl
Processorrepo/RDF2TSSProcssorPy/: pyproject.toml
Processorrepo/RDF2TSSProcssorPy/src/RDF2TSSProcssorPy/: processor.py  processor.ttl
Processorrepo/RmlProcessor2Py/: pyproject.toml
Processorrepo/RmlProcessor2Py/src/RmlProcessor2Py/: processor.py  processor.ttl
Processorrepo/RmlProcessorPy/: pyproject.toml
Processorrepo/RmlProcessorPy/src/RmlProcessorPy/: processor.py
Processorrepo/SHACLvalidatePy/: pyproject.toml
Processorrepo/SHACLvalidatePy/src/SHACLvalidatePy/: processor.py  processor.ttl  temp.py
Processorrepo/TSS2RDFProcessorPy/: pyproject.toml
Processorrepo/TSS2RDFProcessorPy/src/TSS2RDFProcessorPy/: processor.py  processor.ttl
Processorrepo/sds-storage-writer-ts/src/: extractor.ts
pipeline/: buckets_save.json  notestoself.txt  package-lock.json  package.json  pipeline.ttl  pyproject.toml
pipeline-by-jr/: README.md  package-lock.json  package.json  pipeline.ttl  pyproject.toml
pipeline-by-jr/WFresources/: mappings.rml.ttl  sample_data.csv  sds-metadata.ttl  shape.ttl
pipeline/WFresources/: KGCMapping.rml.ttl  NewMapping.rml.ttl  generatedRDF.ttl  mapping.rml.ttl  meatadata.ttl
